# django_celery_beat

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  tasks.py  test.py
common/: validators.py
myapp/: tasks.py  urls.py
myapp/validator_sample_views/: body_sample_view.py  path_param_sample_view.py  query_param_sample_view.py
myapp/views/: celery_test_view.py  query_param_sample_view.py  sample_view.py
proj/: __init__.py  celery.py  db.sqlite3  settings.py  tasks.py  urls.py  wsgi.py
proj/myapp/: tasks.py
proj/proj/: celery.py  settings.py  tasks.py
